# kukaros

./: readme.md
docker/: docker-compose.yml  readme.md
docker-images/: readme.md
docker-images/moveit_kr210/: docker-compose.yml  entrypoint.sh  launch.sh  moveit_python
docker-images/moveit_tuto/: docker-compose.yml
docker-images/ros2-dev/: Dockerfile  entrypoint.sh
docker/moveit_tuto/: docker-compose.yml  entrypoint.sh
kr210_urdf/: CMakeLists.txt
kr210_urdf/moveit_config/: .setup_assistant
kr210_urdf/moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  remus.srdf  remus.urdf.xacro
kr210_urdf/moveit_config/launch/: moveit_rviz.launch.py  warehouse_db.launch.py
kr210_urdf/urdf/: kr210l150_remus.urdf
kuka_hw_controller/: package.xml  setup.cfg  setup.py
kuka_hw_controller/kuka_hw_controller/: controller.py
kuka_kvp_hw_interface/: CMakeLists.txt  package.xml
kuka_kvp_hw_interface/src/: kvp_joint_state_sim_node.cpp
kukavarproxy_hwi_python/: CMakeLists.txt  package.xml
moveit-python-control/: Dockerfile  README.md  requirements.txt
moveit-python-control/src/: add_objects.py  path_planning.py
moveit_config/: package.xml
moveit_config/config/: controllers.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  remus.ros2_control.xacro  ros2_controllers.yaml
moveit_config/launch/: control.launch.py  demo.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py
moveit_config/src/: planing_scene.py
moveit_control/: setup.cfg  setup.py
moveit_control/moveit_control/: add_boxes.py  plan_trajectory.py
src/: move_group.yaml  trajectory.json
src/interface_plugin/: package.xml  setup.cfg  setup.py
src/interface_plugin/interface_plugin/: create_trajectory.py  plugin.py
src/kr210_urdf/: CMakeLists.txt  package.xml
src/kuka_hw_controller/kuka_hw_controller/: controller.py  kukavarproxy.py  kvputils.py
src/kuka_kr210_hardware_interface/: CMakeLists.txt  kuka_kr210_hardware_plugin.xml  package.xml
src/kuka_kr210_hardware_interface/include/kuka_kr210_hardware_interface/: kuka_kr210_system.hpp
src/kuka_kr210_hardware_interface/src/: kuka_kr210_system.cpp
src/moveit_config/config/: joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  old_moveit.rviz  remus.ros2_control.xacro  ros2_controllers.yaml
src/moveit_config/launch/: control.launch.py  move_group.launch.py  rsp.launch.py  static_virtual_joint_tfs.launch.py
src/moveit_control/: package.xml  setup.py
src/moveit_control/meshes/: Atelier - Sol.stl  frame.stl
src/moveit_control/moveit_control/: add_boxes.py  plan_trajectory.py  svgpath.py
temp/: CMakeLists.txt  package.xml
