<?xml version="1.0"?>
<package format="3">
  <name>kuka_kvp_hw_interface</name>
  <version>0.0.1</version>
  <description>KUKA KRC interface using KUKAVARPROXY (ROS 2 port)</description>

  <maintainer email="ivareri@stud.ntnu.no">Ivar Eriksen</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>moveit_ros_control_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>ament_index_cpp</depend>
  <depend>boost</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
