<?xml version="1.0"?>
<package format="3">
  <name>kr210_urdf</name>
  <version>0.1.0</version>
  <description>KUKA KR210 URDF and meshes for ROS 2</description>
  <maintainer email="3dmetalix@gmail.com">Loïc Tournier</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
</package>